fixed overflow in drawer

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -235,7 +235,7 @@ body {
   position: sticky;
   display: flex;
   flex-direction: row-reverse;
-  top: 80px;
+  top: 45px;
   left: 15px;
 }
 
